# Trading-Terminal

./: readme.md
indexer/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml  start.md  todo.md
indexer/config/: default.toml
indexer/indexer-api/: Cargo.toml
indexer/indexer-api/src/: main.rs
indexer/indexer-bin/: Cargo.toml
indexer/indexer-bin/src/: main.rs
indexer/indexer-core/: Cargo.toml
indexer/indexer-core/src/: bonding_parser.rs  config.rs  db.rs  firehose.rs  lib.rs  meteora_parser.rs  models.rs  raydium_parser.rs  redis.rs  spl_parser.rs
indexer/indexer/migrations/: 0003_meteora_dlmm.sql
indexer/migrations/: 0001_init.sql  0002_realtime_candles_bonding.sql
trading-terminal/: Cargo.toml  README.md
trading-terminal/src/: app.rs  config.rs  lib.rs  main.rs  network.rs  swap.rs  ui.rs
