[package]
name = "trading-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
ratatui = "0.26.1"
crossterm = "0.27.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
solana-sdk = "1.18.0"
solana-client = "1.18.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
dotenv = "0.15.0"
anyhow = "1.0.81"
base64 = "0.21.7"
bincode = "1.3.3"
rand = "0.8.5"
