 [package]
 name = "indexer-bin"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 indexer-core = { path = "../indexer-core" }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
 anyhow = "1.0.81"
 config = "0.14.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
serde_json = "1.0.115"
chrono = { version = "0.4.34", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
