 [package]
 name = "indexer-core"
 version = "0.1.0"
 edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.57"
anyhow = "1.0.81"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
serde_with = "3.8.1"
sha2 = "0.10.8"
tonic = "0.11"
prost = "0.12"
bytes = "1.5"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Jetstreamer integration (optional - use with feature flag)
# To enable: cargo build --features jetstreamer
# jetstreamer = { git = "https://github.com/anza-xyz/jetstreamer", optional = true }

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
jetstreamer = []
